<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="425dp"
        android:layout_height="346dp"
        android:contentDescription="@string/main_header_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_header" />

    <EditText
        android:id="@+id/reg_et"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/reg_bg"
        android:autofillHints="@string/hint_REG"
        android:hint="@string/hint_REG"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="440dp"
        android:layout_height="98dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/footer_menu_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_btn" />

    <TextView
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/search"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="@+id/reg_et"
        app:layout_constraintStart_toStartOf="@+id/reg_et"
        app:layout_constraintTop_toBottomOf="@+id/reg_et" />


</androidx.constraintlayout.widget.ConstraintLayout>